--- a/SeProject/views/Help/help.html
+++ b/SeProject/views/Help/help.html
@@ -221,8 +221,8 @@
 		<div class="panel-body">
 			<div style="font-size:14px">
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				被锁定账户原则上为输错五次密码的账户，建议用户更改密码。在左侧的控制面板中依次选择<b>证券账户管理->
-				<a href="index.php/Stockaccount/Stockaccount/indexPerson" style="text-decoration:underline;">更改账户密码</a></b>&nbsp。
+				被锁定账户原则上为输错五次密码的账户。建议提醒用户更改密码。在左侧的控制面板中依次选择<b>证券账户管理->
+				<a href="index.php/Stockaccount/Stockaccount/indexPerson" style="text-decoration:underline;">忘记密码</a></b>&nbsp。
 				验证用户身份信息，设定新密码后为用户更新信息。
 			</div>
 		</div>
