--- a/SeProject/views/Mainwindow/sidebar.html
+++ b/SeProject/views/Mainwindow/sidebar.html
@@ -36,7 +36,7 @@
 			</li>
 			<li>
 				<a href="index.php/Stockaccount/Stockaccount/unlock_index">
-					<span class="title">更改账户密码</span>
+					<span class="title">忘记密码</span>
 				</a>
 			</li>
 		</ul>
