--- a/SeProject/views/Stockaccount/unlock.html
+++ b/SeProject/views/Stockaccount/unlock.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Neon Admin Panel" />
 	<meta name="author" content="" />
 
-	<title>用户账户解锁</title>
+	<title>忘记密码</title>
 	<base href="<?php echo base_url();?>">
 	<link rel="stylesheet" href="assets/js/jquery-ui/css/no-theme/jquery-ui-1.10.3.custom.min.css">
 	<link rel="stylesheet" href="assets/css/font-icons/entypo/css/entypo.css">
@@ -169,7 +169,7 @@
 			</li>
 			<li class="active">
 
-				<strong>更改账户密码</strong>
+				<strong>忘记密码</strong>
 			</li>
 		</ol>
 				
