--- a/SeProject/views/Searchmessage/tables-datatable.html
+++ b/SeProject/views/Searchmessage/tables-datatable.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<?php 
+ini_set('session.gc_maxlifetime', 1); //设置时间 
+echo ini_get('session.gc_maxlifetime');//得到ini中设定值
+ini_set('session.gc_probability', 10);
+ini_set('session.gc_divisor', 10); 
+?> 
+
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -8,7 +15,7 @@
 	<meta name="description" content="Neon Admin Panel" />
 	<meta name="author" content="" />
 
-	<title>Data Tables</title>
+	<title>交易记录</title>
 	
 	<base href="<?php echo base_url();?>">
 	<link rel="stylesheet" href="assets/js/jquery-ui/css/no-theme/jquery-ui-1.10.3.custom.min.css">
@@ -145,7 +152,7 @@
 		
 				<ul class="list-inline links-list pull-right">
 					<li>
-						<a href="index.php/Authentication/Authentication/auth_start">
+						<a href="index.php/Searchmessage/Searchmessage/log_out/<?php echo $username; ?>">
 							Log Out <i class="entypo-logout right"></i>
 						</a>
 					</li>
@@ -159,11 +166,11 @@
 		
 					<ol class="breadcrumb bc-3" >
 								<li>
-						<a href="index.html"><i class="fa-home"></i>主界面</a>
+						<a href="index.php/Mainwindow/Mainwindow/index"><i class="fa-home"></i>主界面</a>
 					</li>
 							<li>
 		
-									<a href="tables-main.html">交易信息查询</a>
+									<a href="index.php/Authentication/Authentication/auth_start">交易信息查询</a>
 							</li>
 						<li class="active">
 		
@@ -173,6 +180,7 @@
 					
 	
 		<br />
+		
 		
 		<table class="table table-bordered datatable" id="table-3">
 			<thead>
