--- a/SeProject/views/Stockaccount/open_account_view_legal.html
+++ b/SeProject/views/Stockaccount/open_account_view_legal.html
@@ -171,16 +171,16 @@
 		
 		<ol class="breadcrumb bc-3" >
 			<li>
-				<a href="index.html"><i class="fa-home"></i>主界面</a>
+				<a href="index.php/Mainwindow/Mainwindow/index"><i class="fa-home"></i>主界面</a>
 			</li>
 
 			<li>
 
-				<a href="forms-main.html">证券账户管理</a>
+				<a href="index.php/Stockaccount/Stockaccount/indexLegal">证券账户管理</a>
 			</li>
 			<li>
 
-				<a href="forms-main.html">用户开户</a>
+				<a href="index.php/Stockaccount/Stockaccount/indexLegal">用户开户</a>
 			</li>
 			<li class="active">
 
