--- a/SeProject/views/Stockaccount/report_loss.html
+++ b/SeProject/views/Stockaccount/report_loss.html
@@ -172,12 +172,12 @@
 		
 		<ol class="breadcrumb bc-3" >
 			<li>
-				<a href="index.html"><i class="fa-home"></i>主界面</a>
+				<a href="index.php/Mainwindow/Mainwindow/index"><i class="fa-home"></i>主界面</a>
 			</li>
 
 			<li>
 
-				<a href="forms-main.html">证券账户管理</a>
+				<a href="index.php/Stockaccount/Stockaccount/reportLoss">证券账户管理</a>
 			</li>
 			<li class="active">
 
